tests/backend/checkmach/fail3.output
File "fail3.ml", line 2, characters 5-12:
Error: Annotation check for noalloc failed on function camlFail3__test_HIDE_STAMP
