tests/backend/checkmach/fail3.ml
(* Always inlined from a different file *)
let[@assert noalloc] test n = T3.test4 n
